--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="icon" href="favicon-96x96.png" type="image/x-icon">
-    <title>Dideli Darbai 2023</title>
+    <title>MISIJA: Ateities inžinierius 2023</title>
 </head>
 <body>
     <header>
 
         <div id="letter-crap-container" data-lettercrap-aspect-ratio='1' data-letter-crap='./words6.png' style="width: 100%;  min-height: 100vh;  color: rgb(82, 82, 82); text-align: center; position: fixed; z-index: -1;" data-lettercrap-words='Your work is going to fill a large part of your life, and the only way to be truly satisfied is to do what you believe is great work. And the only way to do great work is to love what you do. If you have not found it yet, keep looking'></div>
        <div class="header-text-holder">
-            <h1>PROJEKTAS Y 2023</h1>
-            <h2>Elektronikos ateitis, dabar ir po 100 metų.</h2>
-            <p>Registruokitės į bene geriausią renginį metuose.</p>
+            <h1>MISIJA: Ateities inžinierius 2023</h1>
+            <h2>Kviečiame studentus ir dėstytojus.</h2>
+            <p>Renginys vyks 2023 lapkričio 25 dieną. <br> Registruokitės į renginį.</p>
             <a href="" class="registration">REGISTRACIJA</a>
        </div>
 
