--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
        <div class="header-text-holder">
             <h1>MISIJA: Ateities inžinierius 2023</h1>
             <h2>Kviečiame studentus ir dėstytojus.</h2>
-            <p>Renginys vyks 2023 lapkričio 25 dieną. <br> Registruokitės į renginį.</p>
+            <p>Renginys vyks 2023 lapkričio 25 dieną. <br><br> Registruokitės į renginį čia!</p>
             <a href="" class="registration">REGISTRACIJA</a>
        </div>
 
