--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         <div id="letter-crap-container" data-lettercrap-aspect-ratio='1' data-letter-crap='./words6.png' style="width: 100%;  min-height: 100vh;  color: rgb(82, 82, 82); text-align: center; position: fixed; z-index: -1;" data-lettercrap-words='Your work is going to fill a large part of your life, and the only way to be truly satisfied is to do what you believe is great work. And the only way to do great work is to love what you do. If you have not found it yet, keep looking'></div>
        <div class="header-text-holder">
             <h1>MISIJA: Ateities inžinierius 2023</h1>
-            <h2>Kviečiame studentus ir dėstytojus.</h2>
+            <h2>Kur bus inžinerija po 15 metų?</h2>
+            <h2>Kaip dirbtinis intelektas prisidės prie bendros gerovės?</h2>
             <p>Renginys vyks 2023 lapkričio 25 dieną. <br><br> Registruokitės į renginį čia!</p>
             <a href="" class="registration">REGISTRACIJA</a>
        </div>
