--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
 
     <footer>
-        <p>&copy; 2023 Dideli darbai. Visos teisės saugomos.</p>
+        <p>&copy; 2023 Ateities Inžinierius. Visos teisės saugomos.</p>
     </footer>
     <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@figmania/webcomponent/build/index.umd.js"></script>
